# Neural-Network-from-Scratch

./: MNIST_Python_Neural_Network_Final.ipynb  README.md  pyproject.toml  requirements.txt
scripts/: check_code.py
src/: __init__.py  helpers.py  main.py
src/Network/: cross_entropy.py  layer.py  linear.py  network.py  relu.py  training_params.py
src/dataset/MNIST/: mnist.py
